# django_url_shortener

./: .gitignore  README.rst  setup.cfg
django_url_shortener/: admin.py  apps.py  models.py  setup.py  urls.py  utils.py  validators.py  views.py
django_url_shortener.egg-info/: PKG-INFO  SOURCES.txt
django_url_shortener/migrations/: 0001_initial.py
django_url_shortener_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  index.rst
docs/_ext/: edit_on_github.py
docs/_templates/: sourcelink.html
example/example/: settings.py  urls.py
example/testurlshortening/: apps.py  views.py
