[metadata]
name = django-url-shortener-app
version = 0.1
description = Django URL Shortener is a Django app to to include URL Shortening feature in your Django Project.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/rishav00a/django_url_shortener
author = Rishav Sinha
author_email = rishav00a@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.0